Auth erstellt neue AspNetAuth usw.

--- a/Trolley.API/appsettings.json
+++ b/Trolley.API/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": "VSD312ji902Jd2kI75GvBNpR435Fds1iOpgg65dJH7Hhb",
+    "Issuer": "https://localhost:7124/",
+    "Audience": "https://localhost:7124/"
+  },
   "AllowedHosts": "*"
 }
