--- a/Trolley.API/Trolley.API.csproj
+++ b/Trolley.API/Trolley.API.csproj
@@ -12,6 +12,8 @@
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
 		<PackageReference Include="Azure.Identity" Version="1.10.4" />
 		<PackageReference Include="FluentValidation" Version="11.8.1" />
+		<PackageReference Include="itext7" Version="8.0.2" />
+		<PackageReference Include="iTextSharp" Version="5.5.13.3" />
 		<PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.4" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
