--- a/Trolley.API/Trolley.API.csproj
+++ b/Trolley.API/Trolley.API.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="AutoMapper" Version="12.0.1" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
 		<PackageReference Include="Azure.Identity" Version="1.10.4" />
+		<PackageReference Include="CsvHelper" Version="30.0.1" />
 		<PackageReference Include="FluentValidation" Version="11.8.1" />
 		<PackageReference Include="itext7" Version="8.0.2" />
 		<PackageReference Include="iTextSharp" Version="5.5.13.3" />
